# MemoryTrapManager

./: CMakeLists.txt
include/: MemoryTrapManager.h
src/: MemoryManagerTest.cpp  MemoryTrapManager.cpp
